Fix spacing issue in Headquarters section

--- a/src/App.css
+++ b/src/App.css
@@ -981,7 +981,7 @@ label {
 
   .headquarters .grid {
     grid-template-columns: repeat(3, 1fr);
-    width: min(72.6%, 104.5rem);
+    width: min(81.6%, 104.5rem);
     margin-left: 8.5rem;
     gap: 0.9rem;
   }
